# qt_calc_s21

./: .gitignore  CMakeLists.txt  Makefile  README.md
api_calc/: Makefile  README.md  api_helpers.c  calc.c  credit.c  dep.c  graph.c  validation.c
api_calc/headers/: api_calc.h  api_core.h  api_helper.h  api_type.h  api_validation.h
api_calc/type/: stac_char.c  stack_char.h  stack_double.c  stack_double.h
api_calc/unittests/: calc_polish.c  s21_test.c  s21_test.h  test.c  test.h  test_polh.c  test_stack.c  test_valid.c
api_creadit/: credit.c  dep.c
api_creadit/headers/: api_credit_core.h
qt_front/: FormCalc.cpp  FormCalc.hpp  FormCreadit.cpp  FormCreadit.hpp  FormDebit.cpp  FormDebit.hpp  README.md  main.cpp  main_win.cpp  main_win.hpp  simple_calc.cpp  simple_calc.hpp  simple_creadit.cpp  simple_creadit.hpp  tabs.cpp  tabs.hpp
